# flattenAnythingTorch

./: .gitignore  README.md  loss.py  main.py  mesh.py  model.py  pyproject.toml  utils.py
config/: FAconf.yaml
