[project]
name = "flattenanythingtorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "numpy>=2.4.2",
    "omegaconf>=2.3.0",
    "pillow>=12.1.1",
    "plyfile>=1.1.3",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "trimesh>=4.11.2",
]
